<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_appointment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.personalmedipal.activity.AppointmentActivity">

    <CheckBox
        android:text="@string/checkbox_appt_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check_box_appt_notification"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp" />

    <Button
        android:id="@+id/button_appt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/check_box_appt_notification"
        android:layout_marginBottom="74dp"
        android:onClick="onClickAdd"
        android:text="@string/button_appt_add" />

    <Button
        android:id="@+id/button_appt_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickDelete"
        android:text="@string/button_appt_update"
        android:layout_alignBaseline="@+id/button_appt_add"
        android:layout_alignBottom="@+id/button_appt_add"
        android:layout_alignEnd="@+id/edit_text_app_ID" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/edit_text_appt_date"
        tools:ignore="LabelFor"
        android:layout_marginTop="18dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/check_box_appt_notification"
        android:hint="@string/edit_text_appt_date" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="23dp"
        android:id="@+id/edit_text_app_ID"
        android:layout_below="@+id/edit_text_appt_date"
        android:layout_alignStart="@+id/edit_text_appt_date"
        android:hint="@string/edit_text_appt_date" />

</RelativeLayout>
