<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_medi_pal"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.personalmedipal.activity.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="top|bottom|left|right|start|end"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/text_view_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <ImageButton
                    android:id="@+id/button_my_details"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:background="?android:attr/colorBackground"
                    android:contentDescription="@string/text_personal_bio"
                    android:onClick="onClickPersonalBio"
                    android:paddingBottom="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_personalbio" />

                <TextView
                    android:id="@+id/text_view_personal_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_my_details"
                    android:text="@string/text_personal_bio"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <ImageButton
                    android:id="@+id/button_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:background="?android:attr/colorBackground"
                    android:contentDescription="@string/text_medicine"
                    android:onClick="onClickMedicine"
                    android:paddingBottom="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_medicine" />

                <TextView
                    android:id="@+id/text_view_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_medicine"
                    android:textAlignment="center"
                    android:layout_below="@+id/button_medicine"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp" />

            </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                tools:ignore="UselessParent">

                <ImageButton
                    android:id="@+id/button_ice"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:background="?android:attr/colorBackground"
                    android:contentDescription="@string/text_appointment"
                    android:onClick="onClickAppointment"
                    android:paddingBottom="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_appt" />

                <TextView
                    android:id="@+id/text_view_appointment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_ice"
                    android:text="@string/text_appointment"
                    android:textAlignment="center" />

            </RelativeLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
